Update streaks after loading a saved state

BUG: 312768